src/semantic/tests/data/negative/try-outside-function.hsh
for result in std.iter([]) do
	result?
end
